Fix Ask story URLs; fix style issue w/ scrollbars

--- a/hn/style.css
+++ b/hn/style.css
@@ -1,22 +1,22 @@
 #root{
     max-width: 1200px;
-    margin: 0 auto;
+    margin: 0 auto; 
     padding: 0 1rem;
 }
 
 html{
     font-family: 'Roboto', sans-serif;
     background: #f6f6f6;
+    overflow-y: scroll;
 }
 
 nav ul{
     list-style-type: none;
-    padding-left: 0;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    padding: .25rem 0;
+    padding: 0;
     background: #474749;
 }
 
